2007-06-28  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/SyncDialog.cs, Tomboy/SyncManager.cs,
	  Tomboy/FileSystemSyncServer.cs: Initial support for cancelling a
	  sync transaction.  Currently only safe when done during conflict
	  resolution period before applying updates from server.

2007-06-28  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/SyncDialog.cs: Programmatic note renaming now works, though
	  there are some formatting errors remaining.

2007-06-28  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/SyncManager.cs, Tomboy/TomboySyncClient.cs: Add
	  SyncClient.DeletedNoteTitles to maintain a mapping between note
	  GUIDs and note titles for notes deleted since the last sync.  This
	  list is serialized into the local manifest.xml, and it is cleared
	  whenever the client.LastSyncDate is updated.
	* Tomboy/Tomboy.cs: Initialize SyncManager on Tomboy startup.

2007-06-28  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/SyncManager.cs, Tomboy/TomboySyncClient.cs: Add
	  SyncClient.DeletedNoteTitles to maintain a mapping between note
	  GUIDs and note titles for notes deleted since the last sync.  This
	  list is serialized into the local manifest.xml, and it is cleared
	  whenever the client.LastSyncDate is updated.
	* Tomboy/Tomboy.cs: Initialize SyncManager on Tomboy startup.

2007-06-28  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/SyncManager.cs: Handling note deletions from server
	  differently (no longer given in server.GetNoteUpdatesSince).
	* Tomboy/FileSystemSyncServer.cs: Fixed deletion.  Start of work on
	  step #8 as described in
	  http://bugzilla.gnome.org/show_bug.cgi?id=321037#c17 (see TODOs).
	* Tomboy/Note.cs, Tomboy/TomboySyncClient.cs: Use Note.Id to get note
	  GUID.

2007-06-28  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/SyncManager.cs: Wrap note update loop in
	  Gtk.Application.Invoke for thread safety.

2007-06-27  Sandy Armstrong <sanfordarmstrong@gmail.com> 
