@@ -12,7 +12,6 @@ namespace Tomboy
 		static bool tray_icon_showing = false;
 		static bool is_panel_applet = false;
 		static PreferencesDialog prefs_dlg;
-		static SyncDialog sync_dlg;
 #if ENABLE_DBUS
 		static RemoteControl remote_control;
 #endif
@@ -173,7 +172,6 @@ namespace Tomboy
 			am ["ShowAboutAction"].Activated += OnShowAboutAction;
 			am ["TrayNewNoteAction"].Activated += OnNewNoteAction;
 			am ["ShowSearchAllNotesAction"].Activated += OpenSearchAll;
-			am ["NoteSynchronizationAction"].Activated += OpenNoteSyncWindow;
 		}
 		
 		static void OnNewNoteAction (object sender, EventArgs args)
@@ -270,21 +268,6 @@ namespace Tomboy
 			NoteRecentChanges.GetInstance (manager).Present ();
 		}
 		
-		static void OpenNoteSyncWindow (object sender, EventArgs args)
-		{
-			if (sync_dlg == null) {
-				sync_dlg = new SyncDialog ();
-				sync_dlg.Response += OnSyncDialogResponse;
-			}
-			sync_dlg.Present ();
-		}
-		
-		static void OnSyncDialogResponse (object sender, Gtk.ResponseArgs args)
-		{
-			((Gtk.Widget) sender).Destroy ();
-			sync_dlg = null;
-		}
-		
 		public static NoteManager DefaultNoteManager
 		{
 			get { return manager; }
@@ -303,11 +286,6 @@ namespace Tomboy
 		public static TomboyTray Tray
 		{
 			get { return tray_icon.TomboyTray; }
-		}
-		
-		public static SyncDialog SyncDialog
-		{
-			get { return sync_dlg; }
 		}
 	}
 
@@ -444,8 +422,15 @@ namespace Tomboy
 					// If the argument looks like a Uri, treat it like a Uri.
 					if (args [idx].StartsWith ("note://tomboy/"))
 						open_note_uri = args [idx];
-					else
-						open_note_name = args [idx];
+					else {
+						//open_note_name = args [idx];
+						string open_arg = args [idx];
+						if (File.Exists (open_arg)) {
+							// TODO
+						}
+						else
+							open_note_name = args [idx];
+					}
 
 					break;
 
