@@ -26,7 +26,6 @@
     <popup name="TrayIconMenu" action="TrayIconMenuAction">
         <menuitem name="TrayNewNote" action="TrayNewNoteAction" />
         <menuitem name="ShowSearchAllNotes" action="ShowSearchAllNotesAction" />
-        <menuitem name="NoteSynchronization" action="NoteSynchronizationAction" />
     </popup>
 <!-- The following are not implemented yet
     <toolbar name="NoteWindowToolbar" action="NoteWindowToolbarAction">
